<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/newMessageTitle"
        android:textAppearance="@style/TextH5"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messages_new_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/closeButton"
        style="@style/ButtonClose"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/newMessageTo"
        android:textAppearance="@style/TextH5"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messages_new_to"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/newMessageTitle"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="0dp"
        android:singleLine="true"
        android:hint="@string/messages_username_hint"
        android:inputType="text"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/newMessageTo"/>

    <fragment
        android:id="@+id/qrCodeScannerFragment"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintVertical_bias="0.3"
        android:name="com.toucanwalletdemo.ui.custom.scanner.QrCodeScannerFragment"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sendMessageButton"/>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/sendMessageButton"
        app:layout_constraintBottom_toBottomOf="@+id/sendMessageButton"
        app:layout_constraintEnd_toEndOf="@+id/sendMessageButton"
        app:layout_constraintStart_toStartOf="@+id/sendMessageButton"/>

    <Button
        style="@style/Button.Gradient"
        android:layout_marginBottom="20dp"
        android:text="@string/messages_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:id="@+id/sendMessageButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>